Closed Bug 1655395 Opened 4 years ago Closed 4 years ago

Handle egl->fStreamConsumerGLTextureExternalAttribsNV() error in RenderDXGITextureHostOGL

Categories

(Core :: Graphics: WebRender, defect)

defect

Tracking

()

RESOLVED FIXED
81 Branch
Tracking Status
firefox81 --- fixed

People

(Reporter: sotaro, Assigned: sotaro)

References

Details

Attachments

(1 file)

When error happns at egl->fStreamConsumerGLTextureExternalAttribsNV(), MOZ_ALWAYS_TRUE triggers process abort. It is not good.

See Bug 1652403 comment 3.

Assignee: nobody → sotaro.ikeda.g
Blocks: 1652403
Pushed by sikeda.birchill@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e2420148af8e
Remove MOZ_ALWAYS_TRUE from RenderDXGITextureHostOGL r=nical
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: