Bug 1655395 - Remove MOZ_ALWAYS_TRUE from RenderDXGITextureHostOGL r=nical

MOZ_ALWAYS_TRUE causes process abort on failure. we do not want the process abort with false.

The failure could happen when context is lost. It is not necessary to handle the context lost in RenderDXGITextureHostOGL. It is already handled by RendererOGL.

Differential Revision: https://phabricator.services.mozilla.com/D85116